--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: findpdf
 Type: Package
 Title: Find PDF
-Version: 1.1.7
+Version: 1.1.8
 Date: 2025-11-25
 Author: Cassio Pagnoncelli <cassiopagnoncelli@gmail.com>
 Maintainer: Cassio Pagnoncelli <cassiopagnoncelli@gmail.com>
@@ -12,7 +12,8 @@ Description: An R package to find the probability density function (PDF) of a gi
 License: file LICENSE
 Encoding: UTF-8
 Depends:
-    R (>= 4.4.0),
+    R (>= 4.4.0)
+Imports:
     compiler,
     pso,
     GenSA
