--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: dtools
 Type: Package
 Title: Find PDF
-Version: 1.2.1
-Date: 2025-11-25
+Version: 1.3.1
+Date: 2025-11-26
 Author: Cassio Pagnoncelli <cassiopagnoncelli@gmail.com>
 Maintainer: Cassio Pagnoncelli <cassiopagnoncelli@gmail.com>
 Authors@R:
     person("Cassio", "Pagnoncelli", , "cassiopagnoncelli@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0000-7114-7008"))
-Description: An R package to find the probability density function (PDF) of a given dataset.
+Description: 
 License: file LICENSE
 Encoding: UTF-8
 Depends:
@@ -16,7 +16,9 @@ Depends:
 Imports:
     compiler,
     pso,
-    tibble
+    tibble,
+    dplyr,
+    ggplot2
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Suggests: 
