Update package metadata, enhance functions, and improve build process
- Updated DESCRIPTION file: corrected title and bumped version to 1.3.9
- Modified .Rbuildignore: added additional files and directories to ignore
- Enhanced Makefile: improved check command and removed Rcheck directory after check
- Updated NAMESPACE: imported quantile and sd functions from stats
- Enhanced analyse function: added na parameter to conform invalid entries
- Improved plot_distribution function: updated legend formatting for mean and standard deviation
- Added LICENSE file for copyright information

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,5 @@ importFrom(compiler,cmpfun)
 importFrom(pso,psoptim)
 importFrom(stats,complete.cases)
 importFrom(stats,density)
+importFrom(stats,quantile)
+importFrom(stats,sd)
