--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dtools
 Type: Package
-Title: Find PDF
-Version: 1.3.8
+Title: Distribution Tools
+Version: 1.3.9
 Date: 2025-11-27
 Author: Cassio Pagnoncelli <cassiopagnoncelli@gmail.com>
 Maintainer: Cassio Pagnoncelli <cassiopagnoncelli@gmail.com>
