--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,6 @@ Type: Package
 Title: Distribution Tools
 Version: 1.3.9
 Date: 2025-11-27
-Author: Cassio Pagnoncelli <cassiopagnoncelli@gmail.com>
-Maintainer: Cassio Pagnoncelli <cassiopagnoncelli@gmail.com>
 Authors@R:
     person("Cassio", "Pagnoncelli", , "cassiopagnoncelli@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0000-7114-7008"))
@@ -13,7 +11,7 @@ Description: Automatically identifies the best-fitting probability distributions
     ranked results with fitted parameters, PDF/CDF functions, and comprehensive statistical summaries.
     Perfect for statistical analysis, simulation modeling, and understanding your data's underlying
     distribution patterns.
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 Depends:
     R (>= 4.4.0)
